--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ osx_image: xcode8.2
 
 language: objective-c
 
-script: ./test.sh
-  - xcodebuild -workspace YBSlantedCollectionViewLayout.xcworkspace -scheme YBSlantedCollectionViewLayout -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7' -configuration Release ONLY_ACTIVE_ARCH=YES -enableCodeCoverage YES build test
+script:
+  - xcodebuild -workspace YBSlantedCollectionViewLayout.xcworkspace -scheme YBSlantedCollectionViewLayout -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7' build test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
